released 2.0.4, fixed overlapping issue on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,10 @@ $desktop: 420px;
     flex: 1;
     display: flex;
     align-items: center;
+
+    &__inner {
+      flex: 1;
+    }
   }
 
   &__icon {
@@ -71,6 +75,7 @@ $desktop: 420px;
 
       &:hover {
         color: currentColor;
+        text-decoration: underline;
       }
     }
   }
